[gd_scene load_steps=5 format=1]

[ext_resource path="res://components/ui/card_display.gd" type="Script" id=1]
[ext_resource path="res://components/ui/card_sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/PressStart2P-16pt.fnt" type="Font" id=3]
[ext_resource path="res://assets/fonts/PressStart2P-8pt.fnt" type="Font" id=4]

[node name="CardDisplay" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
script/script = ExtResource( 1 )

[node name="CardPopup" type="PopupDialog" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
margin/left = 128.0
margin/top = 256.0
margin/right = 128.0
margin/bottom = 16.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
popup/exclusive = false

[node name="Card" parent="CardPopup" instance=ExtResource( 2 )]

transform/pos = Vector2( 74, 148 )

[node name="Name" parent="CardPopup/Card"]

visibility/visible = false

[node name="CardName" type="Label" parent="CardPopup"]

anchor/right = 1
margin/left = 16.0
margin/top = 24.0
margin/right = 16.0
margin/bottom = 64.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "Card Name"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DescriptionPanel" type="Panel" parent="CardPopup"]

anchor/right = 1
anchor/bottom = 1
margin/left = 143.0
margin/top = 80.0
margin/right = 16.0
margin/bottom = 16.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="CardDescription" type="Label" parent="CardPopup/DescriptionPanel"]

anchor/right = 1
anchor/bottom = 1
margin/left = 5.0
margin/top = 5.0
margin/right = 5.0
margin/bottom = 5.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Card Description"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


[editable path="CardPopup/Card"]
